fixed mobile menu bug on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,10 @@ nav .active:hover {
     transform: translateX(-102%);
 }
 
+#menu-checkbox:checked~header {
+    overflow: visible;
+}
+
 /* ---------------------
    Main
    --------------------- */
